UI restyling and mobile view (in progress)

--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "superagent": "^3.8.2"
   },
   "scripts": {
-    "start": "REACT_APP_API_URL=http://localhost:8000 REACT_APP_REHIVE_API_URL=https://staging.rehive.com/api/3 react-scripts start",
+    "start": "REACT_APP_API_URL=https://launcher.services.rehive.io/api REACT_APP_REHIVE_API_URL=https://api.rehive.com/3 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
