--- a/etc/helm/production/values.yaml
+++ b/etc/helm/production/values.yaml
@@ -19,13 +19,13 @@ service:
 ingress:
   enabled: true
   hosts:
-    - launcher.shapelaunch.com
+    - hive.shapelaunch.com
   annotations:
     kubernetes.io/ingress.class: "nginx"
     kubernetes.io/tls-acme: "true"
   tls:
     - hosts:
-      - launcher.shapelaunch.com
+      - hive.shapelaunch.com
       secretName: launcher-dashboard-tls
 management:
   enabled: false
