Fix API_URL build process.

--- a/etc/helm/staging/.env
+++ b/etc/helm/staging/.env
@@ -1,1 +1,2 @@
-API_URL=https://staging.rehive.com/api/3
+API_URL=https://launcher.s.services.rehive.io
+REHIVE_API_URL=https://api.staging.rehive.com/3
