Fix url and typo.

--- a/etc/helm/production/.env
+++ b/etc/helm/production/.env
@@ -1,2 +1,2 @@
-API_URL=https://launcher.services.rehive.io
+API_URL=https://launcher.services.rehive.io/api
 REHIVE_API_URL=https://api.rehive.com/3
