--- a/etc/helm/staging/.env
+++ b/etc/helm/staging/.env
@@ -1,2 +1,2 @@
-API_URL=https://launcher.s.services.rehive.io
+API_URL=https://launcher.s.services.rehive.io/api
 REHIVE_API_URL=https://api.staging.rehive.com/3
