Add stellar service url configuration.

--- a/etc/helm/staging/.env
+++ b/etc/helm/staging/.env
@@ -1,2 +1,3 @@
 API_URL=https://launcher.s.services.rehive.io/api
 REHIVE_API_URL=https://api.staging.rehive.com/3
+STELLAR_SERVICE_URL=https://stellar.s.services.rehive.io/api/1
