--- a/etc/helm/production/.env
+++ b/etc/helm/production/.env
@@ -1,2 +1,3 @@
 API_URL=https://launcher.services.rehive.io/api
 REHIVE_API_URL=https://api.rehive.com/3
+STELLAR_SERVICE_URL=https://stellar.services.rehive.io/api/1
