--- a/src/containers/config.json
+++ b/src/containers/config.json
@@ -1,7 +1,7 @@
 {
-	"display_name": "SHAPE",
-	"subtitle": "Welcome to the Shape launcher!",
-	"admin_email": "test1@rehive.com",
-	"card_display_name": "Shape Launcher",
-	"description": "Shape launcher is an out-of-the-box, open source tool built on Rehive and Stellar to connect and reward your supporters! Add reward campaigns to reward users for helping you shape your product and add perks that can be exchanged for custom tokens!"
+	"display_name": "RHINO",
+	"subtitle": "Welcome to the Rhino Coin!",
+	"admin_email": "admin@rehive.com",
+	"card_display_name": "Rhino Coin",
+	"description": "Thanks for attending the Draper Block(chain) Party! Claim your Rhino coin!"
 }
