--- a/etc/helm/production/values.yaml
+++ b/etc/helm/production/values.yaml
@@ -19,17 +19,13 @@ service:
 ingress:
   enabled: true
   hosts:
-    - hive.shapelaunch.com
-    - shapelaunch.com
-    - www.shapelaunch.com
+    - rhino.shapelaunch.com
   annotations:
     kubernetes.io/ingress.class: "nginx"
     kubernetes.io/tls-acme: "true"
   tls:
     - hosts:
-      - shapelaunch.com
-      - www.shapelaunch.com
-      - hive.shapelaunch.com
+      - rhino.shapelaunch.com
       secretName: launcher-dashboard-tls
 management:
   enabled: false
