--- a/rdeploy.yaml
+++ b/rdeploy.yaml
@@ -1,5 +1,5 @@
-project_name: launcher-dashboard
-docker_image: gcr.io/rehive-services/launcher-dashboard
+project_name: rhino
+docker_image: gcr.io/rehive-services/rhino
 venv_python: ~/anaconda/envs/zapgo-core/bin/python3.5
 helm_chart: rehive/rehive-service
 helm_chart_version: 0.1.31
@@ -7,12 +7,12 @@ configs:
     staging:
       project: rehive-services
       cluster: staging
-      namespace: launcher-dashboard-staging
+      namespace: rhino-staging
       helm_values_path: ./etc/helm/staging/values.yaml
       env_dir: ./etc/helm/staging/
     production:
       project: rehive-services
       cluster: production
-      namespace: launcher-dashboard
+      namespace: rhino
       helm_values_path: ./etc/helm/production/values.yaml
       env_dir: ./etc/helm/production/
