Update email text colour

--- a/public/config.json
+++ b/public/config.json
@@ -2,5 +2,5 @@
 	"display_name": "RHINO",
 	"subtitle": "The Draper Block(chain) Party Coin",
 	"card_display_name": "Rhino coin",
-	"description": "Thanks for attending! Claim your Rhino coin."
+	"description": "Thanks for attending! Claim your rhino coins."
 }
