--- a/etc/nginx/conf.d/default.conf
+++ b/etc/nginx/conf.d/default.conf
@@ -10,6 +10,18 @@ server {
         try_files $uri /index.html;
     }
 
+    location /.well-known/stellar.toml {
+      alias   /usr/share/nginx/html/stellar.toml;
+      add_header 'Access-Control-Allow-Origin' '*';
+      add_header 'Content-Type' 'text/plain';
+    }
+
+    location /logo.png {
+      alias   /usr/share/nginx/html/logo.png;
+      add_header 'Access-Control-Allow-Origin' '*';
+      add_header 'Content-Type' 'image/png';
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
