--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bignumber.js": "^6.0.0",
     "material-ui": "^0.20.0",
     "moment": "^2.21.0",
-    "react": "^16.0.0",
+    "react": "^16.3.1",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
