--- a/etc/nginx/conf.d/default.conf
+++ b/etc/nginx/conf.d/default.conf
@@ -18,7 +18,7 @@ server {
     }
 
     location / {
-        root   /usr/share/nginx/html;
+        alias   /usr/share/nginx/html;
         try_files $uri /index.html;
     }
 
