--- a/etc/nginx/conf.d/default.conf
+++ b/etc/nginx/conf.d/default.conf
@@ -5,6 +5,12 @@ server {
     #charset koi8-r;
     #access_log  /var/log/nginx/log/host.access.log  main;
 
+    location /.well-known/stellar.toml {
+       alias   /usr/share/nginx/html/.well-known/stellar.toml;
+       add_header 'Access-Control-Allow-Origin' '*';
+       add_header 'Content-Type' 'text/plain';
+    }
+
     location / {
         root   /usr/share/nginx/html;
         try_files $uri /index.html;
