Update to redirect to rehive wallet

--- a/src/containers/config.json
+++ b/src/containers/config.json
@@ -3,5 +3,5 @@
 	"subtitle": "Welcome to the Rhino Coin!",
 	"admin_email": "admin@rehive.com",
 	"card_display_name": "Rhino Coin",
-	"description": "Thanks for attending the Draper Block(chain) Party! Claim your rhino coins."
+	"description": "The official Draper University coin, launched at the Block Party on April 12, 2018"
 }
