--- a/public/config.json
+++ b/public/config.json
@@ -1,6 +1,6 @@
 {
 	"display_name": "RHINO",
-	"subtitle": "The Draper Block(chain) Party Coin",
+	"subtitle": "The official Draper University coin",
 	"card_display_name": "Rhino coin",
-	"description": "Thanks for attending! Claim your rhino coins."
+	"description": "Launched at the Draper Block Party on April 12, 2018."
 }
